1.20.5 - fabric only